--- a/src/styles/dropdown.css
+++ b/src/styles/dropdown.css
@@ -17,8 +17,9 @@
 .dropdown > p {
   background: #998508;
   margin: 5px 10px;
-  padding: 5px;
+  padding: 10px 5px;
   color: #fff;
+  cursor: pointer;
 }
 
 .dropdown-link {
