--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -62,6 +62,13 @@
   width: 300px;
 }
 
+.close-tab {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
 @media (max-width: 600px) {
   .sidebar {
     width: 0px;
